[[bin]]
name = "server"
src = "src/bin/server.rs"

[[bin]]
name = "client"
src = "src/bin/client.rs"

[[bin]]
name = "mitm"
src = "src/bin/mitm.rs"

[package]
name = "lemur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
